cluster/apps/selfhosted/duplicacy/duplicacy-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: duplicacy
  namespace: selfhosted
  labels:
    app.kubernetes.io/name: duplicacy
spec:
  replicas: 1
  serviceName: duplicacy
  selector:
    matchLabels:
      app.kubernetes.io/name: duplicacy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: duplicacy
    spec:
      containers:
      - name: duplicacy
        image: saspus/duplicacy-web:v1.5.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh | - '-c'|- exit $(test $(date +%H) -eq 3 && echo 1 || echo 0)
          failureThreshold: 1
          initialDelaySeconds: 3600
          periodSeconds: 60
        ports:
        - containerPort: 3875
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 10Mi
          limits:
            cpu: 2000m
            memory: 4Gi
        volumeMounts:
        - mountPath: /config
          name: duplicacy-data
          subPath: config
        - mountPath: /logs
          name: duplicacy-data
          subPath: logs
        - mountPath: /cache
          name: duplicacy-cache
        - name: backup-share
          mountPath: /backups
      volumes:
      - name: duplicacy-data
        persistentVolumeClaim:
          claimName: duplicacy-data
      - name: duplicacy-cache
        emptyDir: {}
      - name: backup-share
        persistentVolumeClaim:
          claimName: backup-share
